# cursor_test

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Makefile  PLAN.md  PLAN.v6.0.backup.md  README.md  SECURITY.md  SECURITY_FIXES.md  docker-compose.prod.yml  docker-compose.yml  setup.bat  start.bat
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  circuit_breaker.py  config.py  database.py  error_handlers.py  errors.py  http_client.py  logging_config.py  qdrant_client.py  redis_client.py  request_id.py  response_envelope.py  security_headers.py
backend/scripts/: wait-for-services.sh
backend/tests/integration/: conftest.py  test_db_connectivity.py  test_health_endpoints.py  test_qdrant_connectivity.py  test_redis_connectivity.py
backend/tests/unit/: test_circuit_breaker.py  test_config.py  test_config_loader.py  test_envelope_shape.py  test_logging_format.py  test_repo_imports.py  test_request_id.py  test_skeleton.py
docker/timescaledb/: init.sh  init.sql.template
docs/: contributing.md  engineering-standards.md  phase_progress.md  setup.md
docs/phase_reports/: PHASE_01.md  PHASE_02.md  PHASE_03.md
docs/runbooks/: services.md
legacy/: Dockerfile  README.md  add_to_path.bat  setup.ps1  start.ps1
scripts/: check_env_security.sh
scripts/health_checks/: phase_01.sh  phase_02.sh  phase_03.sh
