[project]
name = "tradingagents-backend"
version = "0.3.0"
description = "TradingAgents-TW Secure Edition backend (FastAPI + LangGraph + TimescaleDB)"
readme = "../README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "TradingAgents-TW" }]

# v7.0 Phase 1 雛形依賴（後續 Phase 補：langgraph、celery、qdrant-client、pandas、playwright 等）
dependencies = [
    # Web 框架
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    # 設定 / 驗證
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "email-validator>=2.2,<3.0",
    # Logging
    "structlog>=24.4,<25.0",
    # HTTP client
    "httpx>=0.27,<0.29",
    "tenacity>=8.5,<10.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<2.0",
    # Redis
    "redis>=5.0,<6.0",
    # Auth (P8 才用，這裡先列)
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    # 時區
    "tzdata",
]

[dependency-groups]
dev = [
    # Lint / Format
    "ruff>=0.7,<1.0",
    # 測試
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    # 型別
    "mypy>=1.13,<2.0",
    "types-redis>=4.6,<5.0",
    # 安全工具（P1 退出條件需要）
    "detect-secrets>=1.5,<2.0",
    "pre-commit>=4.0,<5.0",
]

# ────────────────────────────────────────────────────────
# Tooling 設定
# ────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "../legacy",
    "migrations/versions",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "S",             # bandit-lite
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length（formatter 處理）
    "S101",          # assert 在 test 中正常
    "B008",          # FastAPI Depends() 在 default arg 是慣例
    # 繁中專案：ruff 會把全形標點視為 ambiguous，但這正是中文寫作慣例
    "RUF001",        # ambiguous string 全形
    "RUF002",        # ambiguous docstring 全形
    "RUF003",        # ambiguous comment 全形
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]   # tests 允許 hardcoded secret 字串

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: unit tests (no external dependency)",
    "integration: integration tests (need docker compose up)",
    "security: security / OWASP tests",
    "network: tests that hit real external API (skip in CI by default)",
    "expensive: tests that cost real money (LLM API calls, skip by default)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
